# HiddenGem

./: .gitignore  batman_results.json  f we  main.py  pyproject.toml  requirements.txt  start.sh  test.py
app/api/: routes.py
app/services/: display_data.py  emded_data.py  fetch_movies.py  rag.py
app/services/trash/: corr.py  langgraph.py  langgraphasync.py  langrag.py  rag.py  ragasync.py
app/templates/: index.html
config/: __init__.py  config.py
