[project]
name = "hiddengrem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "torch==2.7.0",
    "uvicorn>=0.34.2",
]
